# EisenSrc

./: .gitignore  readme.md
.github/workflows/: main.yml
QW/: Makefile  ed.hup  meson.build  meson.options  qwcl
QW/client/: bspfile.h  cdaudio.h  cl_input.c  cl_main.c  cl_parse.c  client.h  cmd.h  common.c  common.h  console.c  console.h  cvar.h  d_iface.h  d_vars.c  draw.h  gl_draw.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_vidlinux.c  gl_vidlinux_svga.c  gl_vidlinux_x11.c  glquake.h  input.h  mathlib.h  menu.h  net_chan.c  pmove.c  pmove.h  quakeasm.h  quakedef.h  r_local.h  render.h  sbar.c  screen.c  screen.h  sys.h  vid.h  vid_svgalib.c  vid_x.c  (+2 more)
QW/debugi386-glibc/: glqwcl.glx  qwcl.x11  qwsv
QW/debugi386-glibc/qw/: config.cfg
QW/debugi386-glibc/qw/glquake/: 15to8.pal
QW/include/common/: bothdefs.h
QW/include/glad/: glad.h
QW/include/mp/: progdefs.h  quakeasm.h  qwsvdef.h  sv_main.h
QW/include/sp/: crc.h  d_ifacea.h  d_local.h  glquake.h  glquake2.h  keys.h  modelgen.h  net.h  protocol.h  quakedef.h  sbar.h  screen.h  spritegn.h  winquake.h
QW/include/util/: packfile.hpp
QW/server/: pr_edict.c  progs.h  qwsvdef.h  server.h  sv_main.c  sv_user.c  sys.h  world.h
QW/shaders/: frag.glsl  frag2d.glsl  vert.glsl
QW/src/mp/: pr_cmds.c  sys_unix.c
QW/src/mp/server/: sv_main.c  sv_user.c
QW/src/sp/: cl_main.c  cl_parse.c  cmd.c  common.c  crc.c  d_edge.c  glad.c  menu.c  net_chan.c  sbar.c  snd_dma.c
QW/src/sp/client/: cl_ents.c
QW/src/sp/net/: net_udp.c
QW/src/sp/opengl/: gl_vidlinuxglx.c
QW/src/sp/opengl-1.1/: gl_rmisc.c  gl_vidlinuxglfw.c  gl_warp.c
QW/src/sp/opengl-4.1/: gl_draw.c  gl_ngraph.c  gl_rsurf.c  gl_vidlinuxglfw.c  gl_warp.c
QW/src/sp/system/: sys_linux.c
QW/src/util/pak/: main.cpp  packfile.cpp
WinQuake/: Makefile  asm_draw.h  asm_i386.h  bspfile.h  client.h  cmd.h  common.h  conproc.h  console.h  crc.h  cvar.h  d_iface.h  d_local.h  draw.h  gl_draw.c  gl_model.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_rsurf.h  gl_screen.c  gl_vidlinuxglfw.c  gl_vidlinuxglx.c  glquake.h  glquake2.h  input.h  keys.h  mathlib.h  menu.h  net.h  net_bw.h  net_dgrm.h  net_ipx.h  net_loop.h  net_mp.h  net_ser.h  net_udp.c  net_udp.h  net_vcr.h  net_wins.h  (+20 more)
